# pydanticai-tutrial

./: README.md  pyproject.toml
src/: agent.py  agent_langchain.py  agent_openai_client.py  dice_game.py  eval_prompts.py  pydantic_model.py  response_model.py  streamed_user_profile.py  system_prompt.py  system_prompt_dependencies.py  test_dice_game.py  test_system_prompt.py  tool_retry.py  types_mistake.py
